--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -57,6 +57,8 @@
   </view>
   <view class="input-wrap mt" wx:if="{{lists.length>0}}">
     <button class="btn btn-save" bindtap="saveData">保存数据</button>
+    当前任务完成进度
+    <van-progress class="progress" percentage="{{progress}}" />
   </view>
 </view>
  
